--- a/GymBro/GymBroIntro.form
+++ b/GymBro/GymBroIntro.form
@@ -16,7 +16,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="d21a3" class="javax.swing.JButton" binding="preMadeBtn">
+          <component id="d21a3" class="javax.swing.JButton" binding="btnPreMade">
             <constraints>
               <grid row="3" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -29,7 +29,7 @@
               <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
-          <component id="c1595" class="javax.swing.JButton" binding="customBtn">
+          <component id="c1595" class="javax.swing.JButton" binding="btnCustom">
             <constraints>
               <grid row="4" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
